2012-04-09 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/menu.php: Fixed first entry in godmode menu.

2012-04-09  Sergio Martin <sergio.martin@artica.es>

	* include/javascript/jquery.pandora.controls.js
	godmode/groups/group_list.php
	godmode/massive/massive_delete_action_alerts.php
	godmode/massive/massive_add_action_alerts.php: Improved the 
	template actions sections into massive operations 
	deleting compound deprecated alerts and showing only the
	agents with templates in the combos

2012-04-09  Sergio Martin <sergio.martin@artica.es>

	* include/functions_reports.php: Fixed "forecating"
	typo error

2012-04-08  Junichi Satoh  <junichi@rworks.jp>

	* include/db/postgresql.php, include/functions_config.php,
	godmode/massive/massive_delete_modules.php,
	godmode/massive/massive_edit_modules.php: Fixed SQL error with
	PostgreSQL.

2012-04-08  Junichi Satoh  <junichi@rworks.jp>

	* godmode/admin_access_logs.php: Fixed SQL error with PostgreSQL.

2012-04-04 Miguel de Dios  <miguel.dedios@artica.es>

	* extensions/update_pandora/functions.ajax.php,
	extensions/update_pandora/functions.php, extensions/update_pandora.php:
	started to join to the openupdatemanager and some fixeds.

	Merged from the branch pandora_4.0

2012-04-04 Miguel de Dios  <miguel.dedios@artica.es>

	* extensions/update_manager.php,
	extensions/update_manager/load_updatemanager.php,
	extensions/update_manager/lib/xmlrpc/xmlrpc.inc,
	extensions/update_manager/lib/libupdate_manager_client.php,
	extensions/update_manager/lib/libupdate_manager.php,
	extensions/update_manager/main.php: cleaned source code style.
	
	* extensions/update_manager/settings.php: disabled the path because this
	conf it is burned with each update of PHP files.

	Merged from the branch pandora_4.0

2012-04-04  Sergio Martin <sergio.martin@artica.es>

	* godmode/massive/massive_edit_agents.php
	godmode/massive/massive_edit_modules.php: Fixed several bugs 